fix disabled button color in dark mode

--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -3,9 +3,6 @@
 }
 
 .dark-mode {
-	display: flex;
-	align-items: center;
-	gap: 5px;
 	margin-left: 1em;
 }
 
@@ -25,6 +22,10 @@
 
 	&.hidden {
 		max-height: 152px;
+	}
+
+	.mat-button-disabled span {
+		color: #a5a5a5;
 	}
 }
 
@@ -52,9 +53,5 @@
 
 	.mat-button {
 		color: #fff;
-	}
-
-	.mat-button-disabled {
-		color: rgb(165, 165, 165) !important;
 	}
 }
